// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarMenu component should match snapshot 1`] = `
<styled.ul>
  <styled.div />
  <ConnectWrapper
    render={[Function]}
    roles={
      Array [
        "GetTransactions",
        "GetPosition",
      ]
    }
  />
  <ConnectWrapper
    render={[Function]}
    roles={
      Array [
        "GetPosition",
      ]
    }
  />
  <ConnectWrapper
    render={[Function]}
    roles={
      Array [
        "GetContract",
      ]
    }
  />
  <styled.li
    onClick={[Function]}
  >
    <styled.div />
    <styled.div>
      <Icon
        color={null}
        fixCrossAxisAlign={null}
        height="28"
        type="Logout"
        width="28"
      />
    </styled.div>
    EXIT
    <styled.div>
      <Icon
        color={null}
        fixCrossAxisAlign={null}
        height="11.9"
        type="Arrow"
        width="11"
      />
    </styled.div>
  </styled.li>
</styled.ul>
`;

exports[`SidebarMenu component should match snapshot for desktop 1`] = `
<styled.div>
  <ConnectWrapper
    render={[Function]}
    roles={
      Array [
        "GetTransactions",
        "GetPosition",
      ]
    }
  />
  <ConnectWrapper
    render={[Function]}
    roles={
      Array [
        "GetPosition",
      ]
    }
  />
  <ConnectWrapper
    render={[Function]}
    roles={
      Array [
        "GetTransactions",
      ]
    }
  />
  <ConnectWrapper
    render={[Function]}
    roles={
      Array [
        "GetContract",
      ]
    }
  />
  <ConnectWrapper
    anyRole={true}
    render={[Function]}
    roles={
      Array [
        "CreateEFT",
        "CreateApproveEFT",
      ]
    }
  />
  <ConnectWrapper
    anyRole={true}
    render={[Function]}
    roles={
      Array [
        "ApproveEFT",
      ]
    }
  />
</styled.div>
`;

exports[`closeArrow should return a component 1`] = `
<styled.div>
  <Icon
    color={null}
    fixCrossAxisAlign={null}
    height="11.9"
    type="Arrow"
    width="11"
  />
</styled.div>
`;
